@@ -1,10 +1,8 @@
 package com.reinaldo.abp.controlller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -24,18 +22,19 @@ public class CursoController {
 
 	private final CursoService service;
 	
-	@PostMapping("/estudiante/{estudianteId}")
-	public CursoResponseDTO grabar(
-			@PathVariable Long estudianteId, 
-			@RequestBody CursoRequestDTO dto) {
+	@PostMapping
+	public CursoResponseDTO grabar(@RequestBody CursoRequestDTO dto) {
 		var curso = CursoMapper.toEntity(dto);
-		var grabado = service.grabar(estudianteId, curso);
+		var grabado = service.grabar(curso);
 		return CursoMapper.toDTO(grabado);
 	}
 	
 	@GetMapping
 	public List<CursoResponseDTO> listar(){
-		return service.listar().stream().map(CursoMapper::toDTO).collect(Collectors.toList()) ;
+		return service.listar()
+				.stream()
+				.map(CursoMapper::toDTO)
+				.toList();
 	}
 	
 }
